--- a/index.html
+++ b/index.html
@@ -67,12 +67,39 @@
 							<div class="video-get-started__body">
 								<div class="video-get-started__title">Stay safe with GoCorona</div>
 								<div class="video-get-started__text">Watch Video</div>
+
 							</div>
 						</a>
 					</div>
 
 				</div>
 
+			</section>
+			<section class="stay-safe">
+				<div class="stay-safe__container">
+					<div class="stay-safe__media">
+						<div class="media-stay-safe">
+							<div class="media-stay-safe__image">
+								<img src="./img/stay-safe/app.png" alt="картинка app">
+							</div>
+							<div class="media-stay-safe__item media-stay-safe__item_1"></div>
+							<div class="media-stay-safe__item media-stay-safe__item_2"></div>
+							<div class="media-stay-safe__item media-stay-safe__item_3"></div>
+						</div>
+
+					</div>
+					<div class="stay-safe__content">
+						<div class="stay-safe__block-text block-text">
+							<h2 class="block-text__title">
+								Stay safe with Go <span>Corona.</span>
+							</h2>
+							<div class="block-text__text">24x7 Support and user friendly mobile platform to bring healthcare to your
+								fingertips. Signup and be a part of the new
+								health culture.</div>
+							<div class="block-text__button button">Features</div>
+						</div>
+					</div>
+				</div>
 			</section>
 
 		</main>
