--- a/index.html
+++ b/index.html
@@ -119,11 +119,12 @@
 									</div>
 								</div>
 							</div>
-							<div class="statistics-experts__decor statistics-experts__decor_1"></div>
-							<div class="statistics-experts__decor statistics-experts__decor_2"></div>
-							<div class="statistics-experts__decor statistics-experts__decor_3"></div>
-
 						</div>
+						<div class="statistics-experts__decor statistics-experts__decor_1"></div>
+						<div class="statistics-experts__decor statistics-experts__decor_2"></div>
+						<div class="statistics-experts__decor statistics-experts__decor_3"></div>
+					</div>
+				</div>
 			</section>
 		</main>
 		<footer class="footer">
