--- a/index.html
+++ b/index.html
@@ -114,15 +114,31 @@
 								<div class="body-statistics-experts__text">Countries</div>
 							</div>
 							<div class="body-statistics-experts__item">
-								<div class="body-statistics-experts__value">10,000+<div>
-										<div class="body-statistics-experts__text">Medical experts</div>
-									</div>
-								</div>
+								<div class="body-statistics-experts__value">10,000+</div>
+								<div class="body-statistics-experts__text">Medical experts</div>
 							</div>
 						</div>
 						<div class="statistics-experts__decor statistics-experts__decor_1"></div>
 						<div class="statistics-experts__decor statistics-experts__decor_2"></div>
 						<div class="statistics-experts__decor statistics-experts__decor_3"></div>
+					</div>
+					<div class="experts__body">
+						<div class="experts__content">
+							<div class="experts__block-text block-text">
+								<h2 class="block-text__title">
+									Talk to <span>experts.</span>
+								</h2>
+								<div class="block-text__text">Book appointments or submit queries into thousands of forums concerning
+									health issues and prevention against noval
+									Corona Virus.</div>
+								<div class="block-text__button button">Features</div>
+							</div>
+						</div>
+						<div class="experts__video">
+							<iframe src="https://www.youtube.com/embed/5BWMErCiDeA" title="YouTube video player"
+								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+								allowfullscreen></iframe>
+						</div>
 					</div>
 				</div>
 			</section>
