--- a/index.html
+++ b/index.html
@@ -145,7 +145,10 @@
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
-				footer
+				<footer>
+					<small>&#9996;&copy; Styles Conference</small>
+					<a href="mailto:shay@mail.ru?subject=Reaching%20Out&body=How%20are%20you">Email Me</a>
+				</footer>
 			</div>
 		</footer>
 	</div>
