--- a/index.html
+++ b/index.html
@@ -142,12 +142,61 @@
 					</div>
 				</div>
 			</section>
+			<section class="halthcare">
+				<div class="halthcare__container">
+					<div class="halthcare__block-text block-text block-text-center block-text-mw">
+						<h2 class="block-text__title">
+							Talk to <span>Healthcare</span> at your Fingertips.
+						</h2>
+						<div class="block-text__text">Bringing premium healthcare features to your fingertips. User friendly mobile
+							platform to bring healthcare to your
+							fingertips. Signup and be a part of the new health culture.</div>
+
+					</div>
+					<div class="halthcare__items">
+						<div class="halthcare__column halthcare__column_1">
+							<div class="halthcare__item item-halthcare ">
+								<div class="item-halthcare__icon">
+									<img src="./img/healthcare/1.svg" alt="иконка">
+								</div>
+								<div class="item-halthcare__title">Symptom Checker</div>
+								<div class="item-halthcare__text">Check if you are infected by COVID-19 with our Symptom Checker</div>
+							</div>
+						</div>
+
+						<div class="halthcare__column halthcare__column_2">
+							<div class="halthcare__item item-halthcare ">
+								<div class="item-halthcare__icon">
+									<img src="./img/healthcare/2.svg" alt="иконка">
+								</div>
+								<div class="item-halthcare__title">24x7 Medical support</div>
+								<div class="item-halthcare__text">Consult with 10,000+ health workers about your concerns.</div>
+							</div>
+						</div>
+
+						<div class="halthcare__column halthcare__column_3">
+							<div class="halthcare__item item-halthcare">
+								<div class="item-halthcare__icon">
+									<img src="./img/healthcare/3.svg" alt="иконка">
+								</div>
+								<div class="item-halthcare__title">Conditions</div>
+								<div class="item-halthcare__text">Bringing premium healthcare features to your fingertips.</div>
+							</div>
+						</div>
+
+					</div>
+				</div>
+			</section>
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
 				<footer>
 					<small>&#9996;&copy; Styles Conference</small>
 					<a href="mailto:shay@mail.ru?subject=Reaching%20Out&body=How%20are%20you">Email Me</a>
+
+
+
+
 				</footer>
 			</div>
 		</footer>
