адаптивная верста скции healthcare, верстка footer

--- a/index.html
+++ b/index.html
@@ -160,7 +160,11 @@
 									<img src="./img/healthcare/1.svg" alt="иконка">
 								</div>
 								<div class="item-halthcare__title">Symptom Checker</div>
-								<div class="item-halthcare__text">Check if you are infected by COVID-19 with our Symptom Checker</div>
+								<div class="item-halthcare__text">Check if you are infected by COVID-19 with our Symptom Checker
+									Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi minus architecto dicta ratione quidem?
+									At sint placeat consectetur facere ab? Distinctio eaque aspernatur veniam unde iure fugiat et
+									exercitationem corrupti.
+								</div>
 							</div>
 						</div>
 
@@ -190,14 +194,15 @@
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
-				<footer>
-					<small>&#9996;&copy; Styles Conference</small>
-					<a href="mailto:shay@mail.ru?subject=Reaching%20Out&body=How%20are%20you">Email Me</a>
-
-
-
-
-				</footer>
+				<div class="footer__items">
+					<a href="" class="footer__item">
+						<img src="./img/footer/google-play.png" alt="google-play">
+					</a>
+					<a href="" class="footer__item">
+						<img src="./img/footer/app-store.png" alt="app-store">
+					</a>
+					</a>
+				</div>
 			</div>
 		</footer>
 	</div>
